Changes in Version 0.2.0-4
	o Added support for 'principal' and 'princomp' objects
	o Nodes with missing colors are now properly mixed from connected nodes.
	o Single manifest variables are now placed at the center
  o Combining SEM models:
   o The '+' function is now overloaded to combine 'semPlotModel' objects
   o The '+' operator can also be used in semPlotModel and semPaths calls. E.g., semPaths( fit1 + fit2 ).

Changes in Version 0.2.0-3
	o Added '--' specifier for unknown edge (undirected)

Changes in Version 0.2.0-2
	o Node color now defaults to NA, for invisible

Changes in Version 0.2.0-1
	o Added arguments 'fixedStyle' and 'freeStyle' to indicate style of fixed and free parameters. Can be numeric for lty, color representation or vector of length 2 containing both (in any order))


Changes in Version 0.2.0-9
	o Thresholds are now plotted inside nodes by default.
	o Color of thresholds now corresponds to edge color if 'edge.color' is assigned

Changes in Version 0.2.0-8
	o Fixed a bug where thresholds for each group where plotted in each seperate graph
	o '~*~' operator in Lavaan is now regarded the same as '~~' (as variance of the node)

Changes in Version 0.2.0-7
	o reorder now moves intercepts with reordered manifest, and works more consistant.

Changes in Version 0.2.0-6
	o Threshold model is now extracted from mplus

Changes in Version 0.2.0-4
	o Added moderate support for intercepts. They are now plotted as small lines on the far side of nodes

Changes in Version 0.2.0-3
	o Improved detection of endogenous variables

Changes in Version 0.2.0-2
	o Added '~>' operator for regression parameters to distinguish between regressions and factor loadings ('->')

Changes in Version 0.2.0-1
	o Default margins are now chosen more appropriatly

Changes in Version 0.2.0

Changes in Version 0.1.0
 o Split from devellopmental version of qgraph
 o Several devellopmental changes